--- a/ang/first/src/app/data-list/data-list.component.html
+++ b/ang/first/src/app/data-list/data-list.component.html
@@ -1,18 +1,46 @@
 <h2>Liste des utilisateurs</h2>
 
+<ng-container [ngSwitch]="products.length">
+  <p *ngSwitchCase="0" class="text text-warning">
+    Chargement en cours
+  </p>
+  <p *ngSwitchCase="1">{{ products[0] }}</p>
+  <ol *ngSwitchDefault>
+    <li *ngFor="let prod of products">
+      {{ prod }}
+    </li>
+  </ol>
+</ng-container>
+
+<!-- <ol *ngIf="products.length">
+  <li *ngFor="let product of products">{{ product }}</li>
+</ol> -->
+
 <table>
   <tr>
-    <td>Id</td>
-    <td>Name</td>
-    <td>Pièces</td>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Pièces</th>
   </tr>
 
-  <tr *ngFor="let elt of data">
-    <td [rowspan]="elt.dependencies.length">{{ elt.id }}</td>
-    <td [rowspan]="elt.dependencies.length">{{ elt.name }}</td>
-    <ng-container *ngFor="let piece of elt.dependencies">
-      <td>{{ piece.label }}</td>
+  <ng-container *ngFor="let elt of data">
+    <ng-container *ngIf="elt.dependencies.length; else noDependencies">
+      <tr *ngFor="let piece of elt.dependencies; first as first">
+        <ng-container *ngIf="first">
+          <td [attr.rowspan]="elt.dependencies.length">{{ elt.id }}</td>
+          <td [attr.rowspan]="elt.dependencies.length">{{ elt.name }}</td>
+        </ng-container>
+
+        <td>{{ piece.label }}</td>
+      </tr>
     </ng-container>
 
-  </tr>
+    <ng-template #noDependencies>
+      <tr>
+        <td>{{ elt.id }}</td>
+        <td>{{ elt.name }}</td>
+        <td><p class="text-info">Aucune</p></td>
+      </tr>
+    </ng-template>
+  </ng-container>
 </table>
