--- a/ang/first/src/app/app.component.html
+++ b/ang/first/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Mon site modeste</h1>
-<!-- <h1 class="{{ cssClass }}">Mon super site de la mort qui tue</h1> -->
+<!-- <h1>Mon site modeste</h1>
+<!-- <h1 class="{{ cssClass }}">Mon super site de la mort qui tue</h1> ->
 
 <p>Image récupérée à partir de {{logo}}.</p>
 
@@ -14,4 +14,6 @@
 
 <app-data-list-async></app-data-list-async>
 
-<app-company-list></app-company-list>
+<app-company-list></app-company-list> -->
+
+<app-home-page></app-home-page>
