--- a/ang/first/src/app/app.component.html
+++ b/ang/first/src/app/app.component.html
@@ -16,4 +16,8 @@
 
 <app-company-list></app-company-list> -->
 
-<app-home-page></app-home-page>
+<app-home-page *ngIf="(user$|async); else notLogued"></app-home-page>
+
+<ng-template #notLogued>
+  <app-login></app-login>
+</ng-template>
