--- a/ang/first/src/app/shared/loading/loading.component.css
+++ b/ang/first/src/app/shared/loading/loading.component.css
@@ -17,7 +17,7 @@ div {
   border: 1px solid gray;
 }
 
-p {
+div p {
   -webkit-animation: loading 2s infinite;
   -moz-animation: loading 2s infinite;
   -o-animation: loading 2s infinite;
