--- a/ang/first/src/app/app.component.html
+++ b/ang/first/src/app/app.component.html
@@ -16,7 +16,7 @@
 
 <app-company-list></app-company-list> -->
 
-<app-home-page *ngIf="(user$|async); else notLogued"></app-home-page>
+<app-home-page *ngIf="(user$|async) as user; else notLogued"></app-home-page>
 
 <ng-template #notLogued>
   <app-login></app-login>
