--- a/ang/bbq-finder/src/app/app.component.html
+++ b/ang/bbq-finder/src/app/app.component.html
@@ -4,6 +4,7 @@
   <ul>
     <li><a [routerLink]="['bbq']">Liste</a></li>
     <li><a [routerLink]="['bbq', 'details']">Détails</a></li>
+    <li><a [routerLink]="['user']">Utilisateurs</a></li>
   </ul>
 </nav>
 
