--- a/ang/bbq-finder/src/app/app.component.html
+++ b/ang/bbq-finder/src/app/app.component.html
@@ -2,8 +2,7 @@
 
 <nav>
   <ul>
-    <li><a [routerLink]="['bbq']">Liste</a></li>
-    <li><a [routerLink]="['bbq', 'details']">Détails</a></li>
+    <li><a [routerLink]="['bbq']">Barbecues</a></li>
     <li><a [routerLink]="['user']">Utilisateurs</a></li>
   </ul>
 </nav>
