--- a/ang/bbq-finder/src/app/bbq/bbq-list/bbq-list.component.html
+++ b/ang/bbq-finder/src/app/bbq/bbq-list/bbq-list.component.html
@@ -1,29 +1,33 @@
 <table>
-<tr>
-  <th>
-    Label
-  </th>
-  <th>
-    Début
-  </th>
-  <th>
-    Nb participants
-  </th>
-  <th>
-    Organisateur
-  </th>
-  <th>
-    Lieux
-  </th>
-</tr>
+<thead>
+  <tr>
+    <th>
+      Label
+    </th>
+    <th>
+      Début
+    </th>
+    <th>
+      Nb participants
+    </th>
+    <th>
+      Organisateur
+    </th>
+    <th>
+      Lieux
+    </th>
+  </tr>
+</thead>
 
-<tr *ngFor="let bbq of (barbecues$ | async)">
-  <td>{{ bbq.label }}</td>
-  <td>{{ bbq.startAt|date:'dd/MM/yyyy hh:mm' }}</td>
-  <td>{{ bbq.users.length }}</td>
-  <td>{{ bbq.owner?.username || 'N.C.' }}</td>
-  <td>{{ bbq.address }}</td>
-</tr>
+<tbody>
+  <tr *ngFor="let bbq of (barbecues$ | async)" [routerLink]="[bbq.id, 'details']">
+    <td>{{ bbq.label }}</td>
+    <td>{{ bbq.startAt|date:'dd/MM/yyyy hh:mm' }}</td>
+    <td>{{ bbq.users?.length||0 }}</td>
+    <td>{{ bbq.owner?.username || 'N.C.' }}</td>
+    <td>{{ bbq.address }}</td>
+  </tr>
+</tbody>
 
 <!-- <tr *ngFor="let bbq of barbecues">
   <td>{{ bbq.label }}</td>
